Subiendo la pagina web terminada con html css

--- a/sitio-web/index.html
+++ b/sitio-web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
@@ -18,19 +18,48 @@
         </ul>
     </nav>
 </header>
+<div class="Bienvenida">
     <main>
         <section>
             <h1>Bienvenidos a CodeMasterPeru</h1>
             <p>Diseñamos y desarrollamos sitios modernos con HTML, CSS, Flex y Grid</p>
+            <img src="../Imagenes/logo.jpg" alt="Logo">
         </section>
     </main>
+</div>
     <div class="container">
-        <div class="tarjeta">Diseño moderno</div>
-        <div class="tarjeta">Codigo Limpio</div>
-        <div class="tarjeta">Responsive</div>
+        <div class="tarjeta">
+            <h3>Diseño Moderno</h3>
+            <article>
+                <p>En CodeMasterPeru creamos experiencias digitales únicas.
+                Combinamos diseño moderno, código limpio y tecnología avanzada 
+                para desarrollar sitios web funcionales, atractivos y totalmente responsivos.
+                Nuestro objetivo es transformar ideas en proyectos web innovadores que 
+                conecten con las personas y potencien tu presencia online.</p>
+            </article>
+        </div>
+        <div class="tarjeta">
+            <h3>Codigo Limpio</h3>
+        <article>
+            <p>En CodeMasterPeru escribimos código limpio, ordenado y eficiente.
+            Cada línea está pensada para garantizar el rendimiento, la escalabilidad y la fácil lectura del proyecto.
+            Aplicamos buenas prácticas de programación, estructura semántica en HTML y un uso óptimo de CSS</p>
+        </article>
+        </div>
+        <div class="tarjeta">
+            <h3>Responsive</h3>
+            <article>
+                <p>La definición de diseño responsive es un enfoque de programación para que un sitio web se ajuste 
+                automáticamente a cualquier tamaño de pantalla de un dispositivo, ofreciendo una experiencia de usuario 
+                óptima tanto en computadoras como en móviles y tablets.</p>
+            </article>
+        </div>
     </div>
     <footer>
         <p>&copy 2025 CodeMasterPeru</p>
+        <p>contacto@codemasterperu.com</p>
+        <p>+51 999 999 999</p>
+        <p> Arequipa, Perú</p>
     </footer>
     
 </body>
