--- a/sitio-web/nosotros.html
+++ b/sitio-web/nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
@@ -18,13 +18,51 @@
         </ul>
     </nav>
     </header>
-    <div class="container">
-        <div class="tarjeta">Juan - Desarrollador</div>
-        <div class="tarjeta">Carla - Diseñadora</div>
-        <div class="tarjeta">Pedro - Marketing</div>
+    <div class="container"> 
+        <div class="tarjeta">
+            <h3>Diego Ramírez</h3>
+            <p>Desarrollador Front-End</p>
+            <p>Especialista en React, JavaScript y diseño responsive. Crea interfaces 
+            rápidas y funcionales.</p>
+            <img src="../Imagenes/Diego.png" alt="Diego">
+        </div>
+        <div class="tarjeta">
+            <h3>Lucía Fernández</h3>
+            <p>Diseñadora UX/UI</p>
+            <p>Apasionada por crear experiencias digitales atractivas y centradas en el usuario.</p>
+            <img src="../Imagenes/Lucia.png" alt="Andre">
+        </div>
+        <div class="tarjeta">
+            <h3>Andrés Salazar</h3>
+            <p>Desarrollador Back-End</p>
+            <p>Encargado de la lógica, bases de datos y seguridad en cada proyecto web.</p>
+            <img src="../Imagenes/Andre.png" alt="">
+        </div>
+        <div class="tarjeta">
+            <h3>Valeria Soto</h3>
+            <p>Gestora de Marketing Digital</p>
+            <p>Diseña estrategias SEO y campañas en redes sociales para aumentar 
+            el alcance de cada marca.</p>
+            <img src="../Imagenes/Valeria.png" alt="Valeria">
+        </div>
+        <div class="tarjeta">
+            <h3>Ricardo Mendoza</h3>
+            <p>Project Manager</p>
+            <p>Coordina los proyectos y asegura entregas puntuales con resultados profesionales.</p>
+            <img src="../Imagenes/Ricardo.png" alt="Ricardo">
+        </div>
+        <div class="tarjeta">
+            <h3>Alvaro Vega</h3>
+            <p>Ingeniero de Software</p>
+            <p>Se encarga de garantizar que cada sistema sea eficiente, escalable, seguro y estable.</p>
+            <img src="../Imagenes/Alvaro.png" alt="Ricardo">
+        </div>
     </div>
     <footer>
         <p>&copy 2025 CodeMasterPeru</p>
+        <p>contacto@codemasterperu.com</p>
+        <p>+51 999 999 999</p>
+        <p> Arequipa, Perú</p>
     </footer>
 </body>
 </html>
