--- a/sitio-web/portafolio.html
+++ b/sitio-web/portafolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portafolio</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
@@ -18,14 +18,41 @@
         </ul>
     </nav>
     </header>
-    <div class="container">
-        <div class="tarjeta">Proyecto 1</div>
-        <div class="tarjeta">Proyecto 2</div>
-        <div class="tarjeta">Proyecto 3</div>
-        <div class="tarjeta">Proyecto 4</div>
+    <div class="contenedor">
+        <div class="tarjeta">
+            <h3>PROYECTO 1</h3>
+            <img src="../Imagenes/Proyecto1_Personal.jpeg" alt="Proyecto_1">
+            <p>Una plataforma de venta de vinos online premium que ofrece una 
+            experiencia de compra personalizada con catálogos inteligentes, un 
+            asistente de recomendaciones y marketing automatizado</p>
+        </div>
+        <div class="tarjeta">
+            <h3>PROYECTO 2</h3>
+            <img src="../Imagenes/Proyecto2_Grupal.png" alt="Proyecto_2">
+            <p>Una aerolínea que opera vuelos nacionales en el Perú, conectando 
+            ciudades principales como Lima, Cusco y Arequipa para facilitar el 
+            turismo y los negocios.</p>
+        </div>
+        <div class="tarjeta">
+            <h3>PROYECTO 3</h3>
+            <img src="../Imagenes/Proyecto3.jpeg" alt="Proyecto_3">
+            <p>Un sitio web fan o centro de información para el juego TETR.IO, 
+            que proporciona guías, noticias, estadísticas y enlaces a la 
+            comunidad y torneos del juego.</p>
+        </div>
+        <div class="tarjeta">
+            <h3>PROYECTO 4</h3>
+            <img src="../Imagenes/Proyecto4.jpeg" alt="Proyecto_4">
+            <p>Una empresa o servicio que se especializa en el diseño y creación 
+            de sitios web modernos, responsivos y visualmente atractivos, 
+            utilizando HTML, CSS, Flexbox y Grid.</p>
+        </div>
     </div>
     <footer>
         <p>&copy 2025 CodeMasterPeru</p>
+        <p>contacto@codemasterperu.com</p>
+        <p>+51 999 999 999</p>
+        <p> Arequipa, Perú</p>
     </footer>
 </body>
 </html>
