--- a/sitio-web/servicios.html
+++ b/sitio-web/servicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
 <header>
@@ -19,13 +19,86 @@
     </nav>
 </header>
     <div class="container">
-        <div class="tarjeta">Desarrollo Web</div>
-        <div class="tarjeta">Diseño UX/UI</div>
-        <div class="tarjeta">Optimizacion SEO</div>
+        <div class="tarjeta">
+            <h3>Desarrollo Web</h3>
+            <p>Creamos sitios web modernos, rápidos y seguros, adaptados a cualquier dispositivo. 
+            Desarrollamos plataformas personalizadas que potencian tu presencia digital y los 
+            objetivos de tu negocio.</p>
+            <p>Incluye:</p>
+            <ul>
+                <li>Sitios corporativos y personales</li>
+                <li>Tiendas online (E-commerce)</li>
+                <li>Landing pages y portafolios</li>
+                <li>Mantenimiento y actualización web</li>
+            </ul>
+        </div>
+        <div class="tarjeta">
+            <h3>Diseño UX/UI</h3>
+            <P>Diseñamos experiencias digitales atractivas y fáciles de usar. Combinamos estética 
+            y funcionalidad para lograr interfaces intuitivas que conectan con tus clientes.</P>
+            <P>Incluye:</P>
+            <ul>
+                <li>Diseño de interfaces (UI)</li>
+                <li>Experiencia de usuario(UX)</li>
+                <li>Prototipado y pruebas de usabilidad</li>
+                <li>Identidad visual y coherencia de marca</li>
+            </ul>
+        </div>
+        <div class="tarjeta">
+            <h3>Optimización SEO</h3>
+            <p>Mejoramos tu posicionamiento en Google con estrategias efectivas. Optimizamos contenido, 
+            estructura y velocidad para atraer más visitas y aumentar tu visibilidad.</p>
+            <p>Incluye:</p>
+            <ul>
+                <li>Auditoría y análisis SEO</li>
+                <li>SEO On-page y Off-page</li>
+                <li>Estrategia de palabras clave</li>
+                <li>Redacción de contenido optimizado</li>
+            </ul>
+        </div>
+        <div class="tarjeta">
+            <h3>Mantenimiento y Soporte Técnico</h3>
+            <p>Cuidamos el rendimiento y seguridad de tu web. Nos encargamos de actualizaciones, copias 
+            de seguridad y soporte técnico continuo.</p>
+            <p>Incluye:</p>
+            <ul>
+                <li>Actualización de plugins y temas</li>
+                <li>Monitoreo y copias de seguridad</li>
+                <li>Optimización de velocidad</li>
+                <li>Soporte técnico continuo</li>
+            </ul>
+        </div>
+        <div class="tarjeta">
+            <h3>Marketing Digital</h3>
+            <p>Aumenta tu alcance con estrategias de marketing digital. Creamos campañas, gestionamos 
+                redes y optimizamos contenidos para impulsar tus resultados.</p>
+            <p>Incluye:</p>
+            <ul>
+                <li>Gestión de campañas publicitarias (Google Ads, Meta Ads)</li>
+                <li>Email marketing</li>
+                <li>Estrategia de contenidos y redes sociales</li>
+                <li>Análisis de métricas y reportes de rendimiento</li>
+            </ul>
+        </div>
+        <div class="tarjeta">
+            <h3>Desarrollo de Tiendas Virtuales</h3>
+            <p>Desarrollamos tiendas online seguras y funcionales. Integramos pagos, gestión de productos 
+            y diseño adaptable para optimizar tus ventas.</p>
+            <p>Incluye:</p>
+            <ul>
+                <li>Diseño personalizado de tienda online</li>
+                <li>Integración con medios de pago (Yape, Niubiz, Visa, PayPal, etc.)</li>
+                <li>Gestión de productos, pedidos y stock</li>
+                <li>Configuración de envíos y facturación</li>
+                <li>Optimización para móviles y SEO para e-commerce</li>
+            </ul>
+        </div>
     </div>
     <footer>
         <p>&copy 2025 CodeMasterPeru</p>
+        <p>contacto@codemasterperu.com</p>
+        <p>+51 999 999 999</p>
+        <p> Arequipa, Perú</p>
     </footer>
-
 </body>
 </html>
