--- a/sitio-web/contacto.html
+++ b/sitio-web/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
@@ -21,13 +21,19 @@
     <main>
         <form action="/Enviar-Formulario" method="post">
             <label for="Nombre">Nombre</label>
-            <input type="text" id="Nombre" name="Nombre">
+            <input type="text"placeholder="Nombre" required>
             <label for="Correo">Correo</label>
-            <input type="email" id="Correo" name="Correo">
+            <input type="email" placeholder="@email" required>
             <label for="Mensaje">Mensaje</label>
-            <textarea name="Mensaje" id="Mensaje"></textarea>
+            <textarea name="Mensaje" placeholder="Escribe un Mensaje" required></textarea>
             <button type="submit">Enviar</button>
         </form>
     </main>
+    <footer>
+        <p>&copy 2025 CodeMasterPeru</p>
+        <p>contacto@codemasterperu.com</p>
+        <p>+51 999 999 999</p>
+        <p> Arequipa, Perú</p>
+    </footer>
 </body>
 </html>
